--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.linting.enabled": true,
+    "python.linting.enabled": false,
     "python.pythonPath": "C:\\Users\\tonyt\\AppData\\Local\\Programs\\Python\\Python37\\python3.exe"
 }
