--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.linting.enabled": false,
+    "python.linting.enabled": true,
     "python.pythonPath": "C:\\Users\\Harry\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
