--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.linting.enabled": true,
-    "python.pythonPath": "C:\\Users\\Harry\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\tonyt\\AppData\\Local\\Programs\\Python\\Python37\\python3.exe",
+    "python.linting.pylintEnabled": true
 }
